SentimentAnalyser/Content/Site.css
body {
    padding-top: 50px;
    padding-bottom: 20px;
    background-color: #1a1a1a;
}

/* Set padding to keep content from hitting the edges */
.body-content {
    padding-left: 15px;
    padding-right: 15px;
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}

/* Set width on the form input elements since they're 100% wide by default */
input,
select,
textarea {
    max-width: 280px;
}

#commentSection
{
    margin-top:50px !important;
}

#chartSection
{
    margin-top:50px !important;
}


ul
{
    margin:0px 0px 0px 0px !important;
    padding:0px 0px 0px 0px !important;
}

.fa {
  color : white;
}

#proba
{
    
    background-color: Transparent;
    background-repeat:no-repeat;
    border: none;
    cursor:pointer;
    overflow: hidden;
    outline:none;

}

#downloadTextFile
{
    text-align:center;
    margin-top:15px;
}


.video-container 
{
position: relative;
padding-bottom: 56.25%;
padding-top: 30px; height: 0; overflow: hidden;
}
 
.video-container iframe,
.video-container object,
.video-container embed {
position: absolute;
top: 0;
left: 0;
width: 100%;
height: 100%;
}

